--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 
      <!--chama o css-->
-     <link rel="stylesheet" href="acneclear2.css">
+     <link rel="stylesheet" href="acneclear.css">
 
      <!--design responsivo-->
      <meta name="viewport" content="width-device-width, initial-scale-1.0, shrink-to-fit">
