--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 
 
 <section class="depoimentos">
-  <h2 style="font-size: 50px; margin-bottom: 170px; margin-top: 30px; color: #5c1f00; font-family: Rubik, sans-serif;font-style: italic;">O que nossos clientes dizem</h2>
+  <h2 style="font-size: 55px; margin-bottom: 90px; margin-top: 50px;
+   color: #5c1f00; font-family: Rubik, sans-serif;font-style: italic;">O que nossos clientes dizem</h2>
 
   <div class="depoimentos-container">
     
@@ -229,10 +230,8 @@
 
 
 <div class="cor">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none" style="display: block; overflow: hidden;">
-  <path fill="#ffcaca" fill-opacity="1" stroke="none" d="M0,160L48,144C96,128,192,96,288,74.7C384,53,480,43,576,64C672,85,768,139,864,160C960,
-  181,1056,171,1152,144C1248,117,1344,75,1392,53.3L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,
-  288,0C192,0,96,0,48,0L0,0Z"></path>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#ffb4b4" fill-opacity="1" d="M0,192L60,181.3C120,171,240,149,360,138.7C480,128,600,128,720,144C840,160,960,192,1080,202.7C1200,213,1320,203,1380,197.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
   </svg>
 
 
