--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   <div class="top1">
   <center>
     <h2 class="che">Descubra o segredo para um rosto mais definido e uma pele 
-      <span style="color:#f52951;">visivelmente rejuvenescida</span> com nosso tratamento <span style="color:#f52951;">seguro</span>
-      <span style="color:#f52951;">eficaz</span> e <span style="color:#f52951;">cientificamente comprovado</span> 
+      <span style="color:#f52951;">Visivelmente Rejuvenescida</span> com nosso tratamento <span style="color:#f52951;">Seguro</span>
+      <span style="color:#f52951;">Eficaz</span> e <span style="color:#f52951;">Cientificamente Comprovado</span> 
       por dermatologistas de todo o Brasil</h2>
 
   </center>
@@ -95,7 +95,7 @@
 
 
 <section class="depoimentos">
-  <h2 style="font-size: 55px; margin-bottom: 90px; margin-top: 50px;
+  <h2 style="font-size: 55px; margin-bottom: 50px; margin-top: 50px;
    color: #5c1f00; font-family: Rubik, sans-serif;font-style: italic;">O que nossos clientes dizem</h2>
 
   <div class="depoimentos-container">
