--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
   <!--titulo da pagina-->
      <div class="md">
        <h1>Reconquiste a <span style="color:#f03359;">Firmeza</span> da Sua 
-          <span style="color:#f03359;">Pele</span> em Exatos <span style="color:#f03359;">6 Dias</span></h1>
+          <span style="color:#f03359;">Pele</span> em Exatos <span style="color:#f03359;">6 Dias</span>
+          com 50% de Desconto<span style="color:#f03359;"> <b>Mas Só Até Hoje!</b> </span></h1> 
           
     </center>
     </div>
@@ -144,7 +145,7 @@
 
 <div class="container-c">
   <div class="top2">
-  <h1 class="text">Benefícios do <b>Método</b></h1>
+  <h1 class="text">Benefícios do <b>Método</b> </h1>
 
   <h2 class="custom-font"> TRANSFORMAÇÃO RÁPIDA E COMPROVADA</h2>
     <h3 class="me">
@@ -210,10 +211,13 @@
 
 <section class="depoimentos">
   <h2 style="font-size: 43px; margin-bottom: 140px; color: #5c1f00; font-family: Rubik, 
-  sans-serif; font-style: italic;">Oferta Especial de Lançamento: <span style="color:#f10030;">50% OFF por Tempo Limitado!</span></h2>
+  sans-serif; font-style: italic;">Transforme Seu Rosto em Dias com o 
+  <span style="color:#f10030;">Tratamento Rejuvenecedor</span> Mais Recomendado por Dermatologistas 
+  <span style="color:#f10030;">70% de Desconto HOJE!</span></h2>
+
 
 <center>
-  <h3 style="font-size: 40px; margin-bottom: 100px; color: #5c1f00;font-family: Anton SC, sans-serif ; width: 80%;">
+  <h3 style="font-size: 35px; margin-bottom: 100px; color: #5c1f00;font-family: Anton SC, sans-serif ; width: 80%;">
     Garanta agora e receba um Manual Prático sobre Chás <span style="color:#ff315a;">Exclusivos</span> de seca barriga, para complementar sua rotina de cuidados.</h3>
 </center>
 
@@ -242,8 +246,9 @@
 <div class="top4">
   <!-- 2 titulo-->
    <center>
-     <h1 style="font-size: 60px;">DIGA ADEUS A PELE FLACIDA</h1>
+     <h1 style="font-size: 60px;">DIGA ADEUS A PELE FLACIDA EM APENAS 6 DIAS!</h1>  
   </center>
+  
 </div>
     </div>
   
