--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
+
+
      <!--chama o css-->
      <link rel="stylesheet" href="acneclear.css">
 
@@ -72,13 +78,13 @@
     <!--Div com o titulo da pagina-->
       <div class="top">
 
+
     <center>
   <!--titulo da pagina-->
      <div class="md">
-       <h1>Reconquiste a <span style="color:#f03359;">Firmeza</span> da Sua 
-          <span style="color:#f03359;">Pele</span> em Exatos <span style="color:#f03359;">6 Dias</span>
-          com 50% de Desconto<span style="color:#f03359;"> <b>Mas Só Até Hoje!</b> </span></h1> 
-          
+       <h1>Reconquiste a <span style="color:#e92950;">Firmeza</span> da Sua 
+          <span style="color:#e92950;">Pele</span> em Exatos <span style="color:#e92950;">6 Dias</span>
+          com <span style="color:#e92950;"> 50% de Desconto </span></h1> 
     </center>
     </div>
   </div>
@@ -211,7 +217,7 @@
 
 <section class="depoimentos">
   <h2 style="font-size: 43px; margin-bottom: 140px; color: #5c1f00; font-family: Rubik, 
-  sans-serif; font-style: italic;">Transforme Seu Rosto em Dias com o 
+  sans-serif; font-style: italic; width: 80%; margin-left: 100px;" >Transforme Seu Rosto em Dias com o 
   <span style="color:#f10030;">Tratamento Rejuvenecedor</span> Mais Recomendado por Dermatologistas 
   <span style="color:#f10030;">50% de Desconto HOJE!</span></h2>
 
@@ -246,7 +252,7 @@
 <div class="top4">
   <!-- 2 titulo-->
    <center>
-     <h1 style="font-size: 60px;">DIGA ADEUS A PELE FLACIDA EM APENAS 6 DIAS!</h1>  
+     <h1 style="font-size: 55px; width: 95%;">DIGA ADEUS A PELE FLACIDA EM APENAS 6 DIAS!</h1>  
   </center>
   
 </div>
