--- a/index.html
+++ b/index.html
@@ -81,13 +81,19 @@
 
     <center>
   <!--titulo da pagina-->
-     <div class="md">
-       <h1>Reconquiste a <span style="color:#e92950;">Firmeza</span> da Sua 
+     
+       <h1 style="font-size: 60px; 
+       color: #461700; 
+       font-family: Rubik, serif;
+       font-optical-sizing: auto;
+       font-style: normal;
+       font-weight: 600;
+       width: 95%;">Reconquiste a <span style="color:#e92950;">Firmeza</span> da Sua 
           <span style="color:#e92950;">Pele</span> em Exatos <span style="color:#e92950;">6 Dias</span>
           com <span style="color:#e92950;"> 50% de Desconto </span></h1> 
     </center>
     </div>
-  </div>
+ 
 
 
   <div class="top1">
