--- a/index.html
+++ b/index.html
@@ -258,7 +258,13 @@
 <div class="top4">
   <!-- 2 titulo-->
    <center>
-     <h1 style="font-size: 55px; width: 95%;">DIGA ADEUS A PELE FLACIDA EM APENAS 6 DIAS!</h1>  
+     <h1 style="font-size: 55px; width: 95%;
+     color: #ff315a; 
+     font-family: Rubik, serif;
+     font-optical-sizing: auto;
+     font-style: normal;
+     font-weight: 700;
+     width: 95%;">DIGA ADEUS A PELE FLACIDA EM APENAS 6 DIAS!</h1>  
   </center>
   
 </div>
