--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <h2 class="che">Descubra o segredo para um rosto mais definido e uma pele 
       <span style="color:#f52951;">Visivelmente Rejuvenescida</span> com nosso tratamento <span style="color:#f52951;">Seguro</span>
       <span style="color:#f52951;">Eficaz</span> e <span style="color:#f52951;">Cientificamente Comprovado</span> 
-      por dermatologistas de todo o Brasil</h2>
+      por dermatologistas de todo o Brasil.</h2>
 
   </center>
   </div>
@@ -280,7 +280,6 @@
         dê o primeiro passo para conquistar um rosto mais<span style="color:#ff315a;"> jovem</span>, <span style="color:#ff315a;">radiante</span> e <span style="color:#ff315a;">cheio de vida</span>. 
         Sua nova pele Começa Aqui!</h2>
     </br>
-  </br>
 
     <h2 style="font-size: 40px; font-family: Baskervville SC, serif;" >Garanta hoje o <span style="color:#ff315a;">Método</span> que já mudou a vida de centenas de pessoas.
      Garanta já o seu e comece a ver os resultados em <span style="color:#ff315a;">6 dias!</span></h2>
