--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
 
       body {
-      background-color: #ffb8b8;
+      background-color: #ffcaca;
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;
@@ -142,9 +142,8 @@
 
 
 <div class="cor">
-    
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#ffb8b8" fill-opacity="1" d="M0,192L60,181.3C120,171,240,149,360,138.7C480,128,600,128,720,144C840,160,960,192,1080,202.7C1200,213,1320,203,1380,197.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
+    <path fill="#ffcaca" fill-opacity="1" d="M0,192L60,202.7C120,213,240,235,360,213.3C480,192,600,128,720,85.3C840,43,960,21,1080,32C1200,43,1320,85,1380,106.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
   </svg>
 </div>
 
@@ -216,7 +215,7 @@
   <!--CODIGO DA ONDA-->
     <div class="cor">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#ffb8b8" fill-opacity="1" d="M0,192L60,181.3C120,171,240,149,360,138.7C480,128,600,128,720,144C840,160,960,192,1080,202.7C1200,213,1320,203,1380,197.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+        <path fill="#ffcaca" fill-opacity="1" d="M0,192L60,202.7C120,213,240,235,360,213.3C480,192,600,128,720,85.3C840,43,960,21,1080,32C1200,43,1320,85,1380,106.7L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
       </svg>
     </div>
   
@@ -246,11 +245,8 @@
 
 <div class="cor">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#ffb8b8" fill-opacity="1" d="M0,192L60,181.3C120,171,240,149,360,138.7C480,128,600,128,720,144C840,160,960,192,1080,202.7C1200,213,1320,203,1380,197.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
+    <path fill="#ffcaca" fill-opacity="1" d="M0,192L60,202.7C120,213,240,235,360,213.3C480,192,600,128,720,85.3C840,43,960,21,1080,32C1200,43,1320,85,1380,106.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
   </svg>
-
-
-
 
 <!--div do titulo -->
 
